--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,3 +2,4 @@
   <p>&copy; <span class="full-year"></span> {{ site.title }}</p>
 </footer>
 <script src="{{ site.baseurl }}/assets/js/scripts.js"></script>
+{% include google_analytics.html %}
