--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,56 +1,15 @@
 ---
-layout: default
+layout: blog
 ---
+
 <article class="post">
+ <div class="space-extra-small">
+ </div>
 
-  <h1 class="post-title">{{ page.title }}</h1>
-
-  <p class="post-meta">
-    <time datetime="{{ page.date | date: "%Y-%m-%d" }}">{{ page.date | date: "%d-%m-%Y" }}</time>
-
-    {% if page.author %}
-      &nbsp;/&nbsp;
-      <span>{{ page.author }}</span>
-    {% endif %}
-  </p>
-
-  <div class="post-content">
-
+  <div class="entry">
     {{ content }}
-
-    {% if page.next.url %}
-      <a class="link-to-post" href="{{ page.next.url }}">
-        <span class="link-to-post__next">&#10535; &nbsp;Next post</span>
-        <span class="link-to-post__title">{{ page.next.title }}</span>
-      </a>
-    {% endif %}
-
-    {% if page.previous.url %}
-      <a class="link-to-post" href="{{ page.previous.url }}">
-        <span class="link-to-post__prev">&#10535; &nbsp;Previous post</span>
-        <span class="link-to-post__title">{{ page.previous.title }}</span>
-      </a>
-    {% endif %}
-
   </div>
 
-  <!-- 라이브리 시티 설치 코드 -->
-  <div id="lv-container" data-id="city" data-uid="MTAyMC8yODQ2My81MDM0">
-  	<script type="text/javascript">
-     (function(d, s) {
-         var j, e = d.getElementsByTagName(s)[0];
-
-         if (typeof LivereTower === 'function') { return; }
-
-         j = d.createElement(s);
-         j.src = 'https://cdn-city.livere.com/js/embed.dist.js';
-         j.async = true;
-
-         e.parentNode.insertBefore(j, e);
-     })(document, 'script');
-  	</script>
-  <noscript> 라이브리 댓글 작성을 위해 JavaScript를 활성화 해주세요</noscript>
-  </div>
-  <!-- 시티 설치 코드 끝 -->
-
+  {% include disqus.html %}
 </article>
+
