--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,6 +1,12 @@
 ---
 layout: default
 ---
+
 <article class="page">
-  {{ content }}
+
+  <h1>{{ page.title }}</h1>
+
+  <div class="entry">
+    {{ content }}
+  </div>
 </article>
