--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,7 @@
       <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
+    <link rel="icon" type="image/png" href="/img/hibbah_favicon.png">
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
     <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
     <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
@@ -17,7 +18,7 @@
   </head>
 
   <body>
-    
+
     <div class="intro-header">
         <div class="wrapper-masthead">
          <div class="container">
@@ -34,30 +35,30 @@
            </header>
          </div>
        </div>
-       
+
         <div class="container">
             <div class="space-small"></div>
-           
+
             <div class="centered">
               <ul class="ch-grid">
                 <li>
-                    <div class="ch-item ch-img-1">				
+                    <div class="ch-item ch-img-1">
                         <div class="ch-info-wrap">
                             <div class="ch-info">
                                 <div class="ch-info-front ch-img-1"></div>
                                 <div class="ch-info-back">
                                     <h3>{{site.name}}</h3>
                                     <p></br><a href="https://linkedin.com/in/{{ site.footer-links.linkedin }}">View on LinkedIn</a></p>
-                                </div>	
+                                </div>
                             </div>
                         </div>
                     </div>
                 </li>
             </ul>
         </div>
-             
+
              <div class="space-medium"></div>
-            
+
         </div>
     </div>
 
